--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </header>
         <div class = "container">
             <section>
-                <p>Welcome to my portfolio</p>
+                <h2>Welcome to my portfolio</h2>
             </section>
             <section class="text-center">
                 <ul>
@@ -38,7 +38,7 @@
                 </li>
 
                 <li>
-                    <p>github</p>
+                    <p>My github</p>
                     <li><a href="https://github.com/aoki234">github</a></li>
                 </li>
 
